--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "material-design-icons": "^3.0.1"
   }
 }
