--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "roto",
   "version": "0.0.0",
   "description": "Tool for creating personalized festival running orders",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
     "start": "tsc && electron-forge start",
     "package": "electron-forge package",
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "sparkson": "^1.3.3"
   }
 }
