--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "description": "Tool for creating personalized festival running orders",
   "main": "dist/main.js",
   "scripts": {
-    "start": "tsc && electron-forge start",
+    "start": "npm run build && electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "build": "tsc"
   },
   "keywords": [],
   "author": {
