--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,6 +4,9 @@
 name: Node.js CI
 
 on:
+  push:
+    branches: [ master, develop, toolcreator, toolcreatorin ]
+    
   pull_request:
     branches: [ master, develop ]
 
