--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,31 +27,17 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Cache node modules
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-modules
-      with:
-        path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-        key: ${{ runner.os }}-node-${{ matrix.node-version }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-${{ matrix.node-version }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-node-${{ matrix.node-version }}-build-
-          ${{ runner.os }}-node-${{ matrix.node-version }}-
-          ${{ runner.os }}-node-
-          ${{ runner.os }}-
-
     - run: npm ci
-      name: install
+      name: Install
 
     - run: npm run lint --if-present
-      name: lint
+      name: Lint
 
     - run: npm run build --if-present
-      name: build
+      name: Build
 
     #- run: npm test
     #  name: test
-    
+
       env:
         CI: true
