--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,10 +3,7 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches: [ master, develop, toolcreator, toolcreatorin ]
-    
+on: 
   pull_request:
     branches: [ master, develop ]
 
@@ -15,17 +12,13 @@ jobs:
 
     runs-on: [ubuntu-latest]
 
-    strategy:
-      matrix:
-        node-version: [12.x, 13.x]
-
     steps:
     - uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup node.js 12.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 12.x
 
     - run: npm ci
       name: Install
