--- a/package.json
+++ b/package.json
@@ -30,10 +30,6 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.50",
-    "@electron-forge/maker-deb": "^6.0.0-beta.50",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.50",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.50",
-    "@electron-forge/maker-zip": "^6.0.0-beta.50",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -49,7 +45,6 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "material-design-icons": "^3.0.1",
-    "sparkson": "^1.3.3"
+    "material-design-icons": "^3.0.1"
   }
 }
