--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "npm run build && electron-forge start",
-    "lint": "eslint --ext .ts .",
+    "prebuild": "cd src/build-config && c-preprocessor build-config.ts.in build-config.ts",
     "build": "tsc",
-    "build-debug": "ts-node-script src/build-config/build-debug.ts",
+    "postbuild": "rimraf src/build-config/build-config.ts",
+    "prebuild-debug": "cd src/build-config && c-preprocessor --config debug-config.json build-config.ts.in build-config.ts",
+    "build-debug": "tsc",
+    "postbuild-debug": "npm run postbuild",
+    "lint": "eslint --ext .ts .",
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test"
   },
@@ -31,15 +35,19 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.50",
     "@types/chai": "^4.2.11",
+    "@types/jsdom": "^16.2.1",
     "@types/mocha": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
+    "c-preprocessor": "^0.2.13",
     "chai": "^4.2.0",
     "electron": "^6.1.9",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
+    "jsdom": "^16.2.2",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
