--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: tests
 
 on: 
   pull_request:
@@ -25,9 +25,6 @@ jobs:
 
     - run: npm run lint --if-present
       name: Lint
-
-    - run: npm run build --if-present
-      name: Build
 
     - run: npm test
       name: Test
