--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-debug": "tsc",
     "lint": "eslint --ext .ts .",
     "pretest": "npm run build",
-    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "test": "nyc mocha",
     "clean": "rimraf dist"
   },
   "keywords": [],
@@ -31,8 +31,48 @@
       "makers": []
     }
   },
+  "mocha": {
+    "recursive": true,
+    "require": [ "ts-node/register" ],
+    "spec": [ "src/**/*.spec.ts" ]
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "reporter": [
+      "html",
+      "text"
+    ],
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "all": true,
+    "check-coverage": true,
+    "branches": 50,
+    "lines": 50,
+    "functions": 50,
+    "statements": 50,
+    "watermarks": {
+      "lines": [
+        50,
+        80
+      ],
+      "functions": [
+        50,
+        80
+      ],
+      "branches": [
+        50,
+        80
+      ],
+      "statements": [
+        50,
+        80
+      ]
+    }
+  },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.50",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/jsdom": "^16.2.1",
     "@types/jsdom-global": "^3.0.2",
@@ -47,6 +87,7 @@
     "jsdom": "^16.2.2",
     "jsdom-global": "^3.0.2",
     "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
