--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,11 @@ jobs:
     - name: Install
       run: npm ci
 
-    - name: Tests
-      run: npm test
+    - name: Lint
+      run: npm run lint --if-present
+
+    - name: Build
+      run: npm run build
 
       env:
         CI: true
