--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: build
+name: coverage
 
 on:
   pull_request:
@@ -22,6 +22,11 @@ jobs:
 
     - name: Tests
       run: npm test
+
+    - name: Coverage
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
 
       env:
         CI: true
