--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,9 +24,10 @@ jobs:
       run: npm test
 
     - name: Coverage
-      uses: coverallsapp/github-action@master
+      uses: codecov/codecov-action@v1
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        file: ./coverage/lcov.info
+        fail_ci_if_error: true
 
       env:
         CI: true
