--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,5 +23,11 @@ jobs:
     - name: Tests
       run: npm test
 
+    - name: CodeCov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage/lcov.info
+        fail_ci_if_error: true
+
       env:
         CI: true
