--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "include": [
       "src/**/*.ts"
     ],
+    "exclude": [
+      "src/**/*.spec.ts"
+    ],
     "reporter": [
       "lcov",
       "text"
