--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "roto",
   "productName": "roto",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Tool for creating personalized festival running orders",
   "main": "dist/main.js",
   "scripts": {
@@ -35,7 +35,8 @@
       "packagerConfig": {},
       "makers": [
         {
-          "name": "@electron-forge/maker-zip"
+          "name": "@electron-forge/maker-zip",
+          "platforms": [ "linux", "win32", "darwin" ]
         }
       ],
       "publishers": [
