--- a/package.json
+++ b/package.json
@@ -57,6 +57,12 @@
         "impliedStrict": true
       }
     },
+    "rules": {
+      "quotes": [
+        2,
+        "single"
+      ]
+    },
     "parser": "@typescript-eslint/parser",
     "env": {
       "browser": true,
@@ -157,6 +163,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
     "material-design-icons": "^3.0.1"
   }
 }
