--- a/package.json
+++ b/package.json
@@ -146,17 +146,18 @@
     "@types/chai": "^4.2.11",
     "@types/jsdom": "^16.2.3",
     "@types/jsdom-global": "^3.0.2",
-    "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@types/mocha": "^8.0.0",
+    "@types/node": "^12.12.50",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "c-preprocessor": "^0.2.13",
     "chai": "^4.2.0",
-    "electron": "^6.1.12",
-    "eslint": "^6.8.0",
+    "electron": "^9.1.0",
+    "eslint": "^7.4.0",
     "eslint-plugin-import": "^2.22.0",
     "jsdom": "^16.3.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^7.2.0",
+    "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
