--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   pull_request:
-    branches: [ master, develop ]
+    branches: [ main, develop ]
   push:
-    branches: [ master, develop ]
+    branches: [ main, develop ]
 
 jobs:
   build:
