--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: tests
 
 on:
   pull_request:
-    branches: [ master, develop ]
+    branches: [ main, develop ]
   push:
-    branches: [ master, develop ]
+    branches: [ main, develop ]
 
 jobs:
   tests:
