--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm run build
 
     - name: Lint
-      run: npm run lint --if-present
+      run: npm run lint
 
       env:
         CI: true
