--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@electron-forge/cli": "^6.0.0-beta.52",
     "@electron-forge/maker-zip": "^6.0.0-beta.52",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.12",
     "@types/jsdom": "^16.2.3",
     "@types/jsdom-global": "^3.0.2",
@@ -164,6 +165,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "electron-squirrel-startup": "^1.0.0",
     "material-design-icons": "^3.0.1"
   }
