--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pretest": "npm run build",
     "test": "nyc mocha",
     "clean": "rimraf dist coverage",
-    "make-all-platforms": "docker build --tag roto-build docker && docker run --mount type=bind,src=$(npm prefix),dst=/roto --env GITHUB_TOKEN=${GITHUB_TOKEN} roto-build",
+    "make-all-platforms": "docker build --tag roto-build docker && docker run --mount type=bind,src=$(npm prefix),dst=/roto roto-build",
     "preversion": "npm test && npm run lint",
     "postversion": "git push && git push --tags && npm run make-all-platforms"
   },
@@ -167,6 +167,6 @@
   "dependencies": {
     "axios": "^0.20.0",
     "electron-squirrel-startup": "^1.0.0",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons-iconfont": "^6.1.0"
   }
 }
