WIP: implement running order output
Fix bug with saving adapter
Add category rank to settings
Improve debug settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,16 +8,23 @@
       "name": "Debug Main Process",
       "type": "node",
       "request": "launch",
-      "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
       "windows": {
-        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+        "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
       },
-      "args": [
+      "runtimeArgs": [
+        "--enable-logging",
+        "--remote-debugging-port=9223",
         "."
       ],
-      "outputCapture": "std",
       "preLaunchTask": "npm: build-debug"
+    },
+    {
+      "name": "Debug Renderer Process",
+      "type": "chrome",
+      "request": "attach",
+      "port": 9223,
+      "webRoot": "${workspaceFolder}/dist",
     },
     {
       "type": "node",
