--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint src/**/*.ts",
     "pretest": "npm run build",
     "test": "nyc mocha",
-    "clean": "rimraf dist coverage",
+    "clean": "rimraf dist",
     "make-all-platforms": "docker build --tag roto-build docker && docker run --mount type=bind,src=$(npm prefix),dst=/roto roto-build",
     "preversion": "npm test && npm run lint",
     "postversion": "git push && git push --tags && npm run make-all-platforms"
@@ -116,24 +116,24 @@
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
     "check-coverage": true,
-    "branches": 50,
-    "lines": 50,
+    "branches": 30,
+    "lines": 30,
+    "statements": 30,
     "functions": 50,
-    "statements": 50,
     "watermarks": {
       "lines": [
-        50,
-        80
-      ],
-      "functions": [
-        50,
-        80
+        30,
+        50
       ],
       "branches": [
-        50,
-        80
+        30,
+        50
       ],
       "statements": [
+        30,
+        50
+      ],
+      "functions": [
         50,
         80
       ]
